# xmonad-config

./: .gitignore  shell.nix  xmonad.cabal  xmonad.hs
